@@ -541,6 +541,12 @@ void PinModule::updateUI()
   m_port->updateUI();
 }
 
+
+
+// The IOPORT class is deprecated.
+
+#if defined(OLD_IOPORT_DESIGN)
+
 //-------------------------------------------------------------------
 //
 // IOPORT::update_stimuli
@@ -903,313 +909,4 @@ IOPORT::~IOPORT()
     delete pins;
 }
 
-#if 0
-
-//-------------------------------------------------------------------
-//-------------------------------------------------------------------
-void PORTB::rbpu_intedg_update(unsigned int new_configuration)
-{
-
-  // Set the state of the interrupt bit first.
-  // The reason is because it may be that the pullups will cause a
-  // an i/o to toggle and hence cause an interrupt.
-
-  if((new_configuration ^ intedg) & intedg_MASK )
-    intedg = new_configuration & intedg_MASK;
-
-  if((new_configuration ^ rbpu) & rbpu_MASK ){
-
-    // Save the state of the I/O pins before any (potential) changes
-    // are made.
-
-    unsigned int old_value = value.get();
-
-    rbpu = new_configuration & rbpu_MASK;
-    bool pullup = rbpu ? false : true;
-
-    // Update each I/O pin's pullup resistor.
-    for(unsigned int i=0; i<num_iopins; i++) {
-      pins[i]->update_pullup(pullup);
-      //if(pins[i]->snode)
-      //  pins[i]->snode->update();
-    }
-
-    // Get the new state of each I/O pin 
-
-    unsigned int temp_value = get_value();
-
-    // If the pullup resistors are being turned on, and the I/O's are
-    // inputs, and there are no stimuli attached, then drive I/O's high.
-
-    temp_value &= stimulus_mask;
-    if(pullup)
-      temp_value |= (tris->value.get() & ~stimulus_mask);
-
-    // If anything changed, then we record the new state.
-    if(temp_value ^ old_value) {
-      trace.raw(write_trace.get() | old_value);
-      value.put(temp_value);
-    }
-  }
-
-}
-
-
-//-------------------------------------------------------------------
-//-------------------------------------------------------------------
-void PORTB::check_peripherals(RegisterValue oldValue)
-{
-
-  int diff = oldValue.get() ^ value.get(); // The difference between old and new
-
-  // If portb bit 0 changed states, check to see if an interrupt should occur
-  if( diff & 1)
-    {
-      // If the option register is selecting 'interrupt on rising edge' AND
-      // the old_value was low (and hence the new high) then set  INTF
-      //                    OR
-      // If the option register is selecting 'interrupt on falling edge' AND
-      // the old_value was high (and hence the new low) then set  INTF
-
-      bool bInterruptOnRisingEdge = (intedg &  intedg_MASK) ? true : false;
-      bool bRisingEdge = (value.get() & 1) ? true : false;
-
-      if(verbose)
-	cout << "RB0 changed\n";
-      if(bInterruptOnRisingEdge == bRisingEdge) {
-	if(verbose)
-	  cout << "Now setting intf\n";
-
-	cpu14->intcon->set_intf(true);
-      }
-    }
-
-
-  // If any of the upper 4 bits of port b changed states then set RBIF
-  // Note, that the interrupt on change feature only works for I/O's
-  // configured as inputs.
-  if(diff & 0xf0 & tris->value.get())
-    cpu14->intcon->set_rbif(true);
-
-
-}
-
-//-------------------------------------------------------------------
-//-------------------------------------------------------------------
-unsigned int PORTB::get(void)
-{
-  //  cout << "PORTB::get  -- value at entry 0x" << hex << value.get() << endl;
-
-  RegisterValue oldValue = value;
-
-  IOPORT::get();
-
-  check_peripherals(oldValue);
-
-  //  cout << "PORTB::get  -- value at exit 0x" << hex << value.get() << endl;
-
-  return value.get();
-}
-
-//-------------------------------------------------------------------
-//-------------------------------------------------------------------
-void PORTB::setbit(unsigned int bit_number, bool new_value)
-{
-  RegisterValue oldValue = value;
-  IOPORT::setbit( bit_number,  new_value);
-  check_peripherals(oldValue);
-}
-
-//-------------------------------------------------------------------
-//-------------------------------------------------------------------
-void PORTB::put(unsigned int new_value)
-{
-  PIC_IOPORT::put(new_value);
-  
-}
-
-//-------------------------------------------------------------------
-//-------------------------------------------------------------------
-PORTB_62x::PORTB_62x(void)
-{
-  //new_name("portb");
-}
-
-unsigned int PORTB_62x::get(void)
-{
-  unsigned int old_value;
-
-  old_value = value.get();
-
-  IOPORT::get();
-
-  int diff = old_value ^ value.get(); // The difference between old and new
-
-  // If portb bit 0 changed states, check to see if an interrupt should occur
-  if( diff & 1)
-    {
-      // If the option register is selecting 'interrupt on rising edge' AND
-      // the old_value was low (and hence the new high) then set  INTF
-      //                    OR
-      // If the option register is selecting 'interrupt on falling edge' AND
-      // the old_value was high (and hence the new low) then set  INTF
-
-      // These two statements can be combined into an exclusive or:
-
-      if( (intedg &  intedg_MASK) ^ (old_value & 1))
-	cpu14->intcon->set_intf(true);
-    }
-
-
-  // If any of the upper 4 bits of port b changed states then set RBIF
-  // Note, that the interrupt on change feature only works for I/O's
-  // configured as inputs.
-  if(diff & 0xf0 & tris->value.get())
-    cpu14->intcon->set_rbif(true);
-
-  if(ccp1con && ( diff & CCP1) )
-    ccp1con->new_edge(value.get() & CCP1);
-
-  if( usart && (diff & RX))
-    usart->new_rx_edge(value.get() & RX);
-
-  return value.get();
-}
-
-//-------------------------------------------------------------------
-//-------------------------------------------------------------------
-void PORTB_62x::setbit(unsigned int bit_number, bool new_value)
-{
-  unsigned int old_value = value.get();
-
-  IOPORT::setbit( bit_number,  new_value);
-
-  int diff = old_value ^ value.get(); // The difference between old and new
-
-  // If portb bit 0 changed states, check to see if an interrupt should occur
-  if( diff & 1)
-    {
-      // If the option register is selecting 'interrupt on rising edge' AND
-      // the old_value was low (and hence the new high) then set  INTF
-      //                    OR
-      // If the option register is selecting 'interrupt on falling edge' AND
-      // the old_value was high (and hence the new low) then set  INTF
-
-      // These two statements can be combined into an exclusive or:
-      //cout << "PORTB_62x::setbit() - bit changed states\n";
-      if( (intedg &  intedg_MASK) ^ (old_value & 1))
-	cpu14->intcon->set_intf(true);
-    }
-
-
-  // If any of the upper 4 bits of port b changed states then set RBIF
-  // Note, that the interrupt on change feature only works for I/O's
-  // configured as inputs.
-  if(diff & 0xf0 & tris->value.get())
-    cpu14->intcon->set_rbif(true);
-
-  if(ccp1con && ( diff & CCP1) )
-    ccp1con->new_edge(value.get() & CCP1);
-
-  if( usart && (diff & RX))
-    usart->new_rx_edge(value.get() & RX);
-
-}
-
-
-void PORTB_62x::check_peripherals(RegisterValue oldValue)
-{
-}
-
-//-------------------------------------------------------------------
-//  PORTA_62x::put(unsigned int new_value)
-//
-//  inputs:  new_value - here's where the I/O port is written (e.g.
-//                       gpsim is executing a MOVWF IOPORT,F instruction.)
-//  returns: none
-//
-//  The I/O Port is updated with the new value. If there are any stimuli
-// attached to the I/O pins then they will be updated as well.
-// Note that for the 62x device, the comparator module overides the
-// tris output control.
-//
-//-------------------------------------------------------------------
-
-void PORTA_62x::put(unsigned int new_value)
-{
-
-  if(new_value > 255)
-    cout << "PIC_IOPORT::put value >255\n";
-
-  trace.raw(write_trace.get() | value.get());
-  //trace.register_write(address,value.get());
-
-  // The I/O Ports have an internal latch that holds the state of the last
-  // write, even if the I/O pins are configured as inputs. If the tris port
-  // changes an I/O pin from an input to an output, then the contents of this
-  // internal latch will be placed onto the external I/O pin.
-
-  internal_latch = new_value;
-
-  // update only those bits that are really outputs
-  //cout << "PORTA_62X::put trying to put " << new_value << "  Tris is " << tris->value <<'\n';
-
-  // Bit 4 is an open collector output (it can only drive low)
-  // If we're trying to drive bit 4 high and bit 4 is an output
-  // then don't change the value on the I/O pin in the same state.
-  // Also, bit 5 is an input regardless of the TRIS setting
-
-  value.put(((new_value & ~tris->value.get()) | (value.get() & tris->value.get())) & valid_iopins);
-
-  // FIXME - this is obviously wrong
-  //if(comparator && comparator->enabled()) 
-  //  value.put(value.get() & (0xff & ~( AN0 | AN1 | AN2 | AN3)));
-
-
-  // Update the stimuli - if there are any
-  if(stimulus_mask)
-    update_stimuli();
-
-}
-
-
-//-------------------------------------------------------------------
-//  unsigned int PORTA_62x::get(void)
-//
-//  inputs:  none
-//
-//  returns: 
-//
-//-------------------------------------------------------------------
-
-unsigned int PORTA_62x::get(void)
-{
-  unsigned int old_value;
-
-  old_value = value.get();
-
-  if(stimulus_mask) {
-//    value.put(  (value.get() & ~stimulus_mask) | update_stimuli());
-      update_stimuli();
-  }
-
-  // If the comparator is enabled, then all of the "analog" pins are
-  // read as zero.
-
-  if(comparator && comparator->enabled()) {
-
-    value.put(value.get() & (0xff & ~( AN0 | AN1 | AN2 | AN3)));
-
-  }
-
-  int diff = old_value ^ value.get(); // The difference between old and new
-  
-  if( ssp && (diff & SS))
-    ssp->new_ss_edge(value.get() & SS);
-  
-  // cout << " PORTA_62X::get port value is " << value << " \n";
-
-  return value.get();
-}
-
-#endif //0
+#endif
